Closed Bug 977400 Opened 10 years ago Closed 10 years ago

--enable-shared-js broken by WeakMapPtr visibility

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34

People

(Reporter: sfink, Assigned: goughostt)

References

Details

(Whiteboard: [js:p2])

http://people.mozilla.org/~sfink/data/link.log

JS::WeakMapPtr is declared with JS_PUBLIC_API. But it's a template, which perhaps matters. I don't know how to fix it.
Whiteboard: [js:p2]
I confirm that, when trying to build Xulrunner (Firefox-30.0), Linux.

Please, let me know if you want the log.
This works:

  sed -i '/^template class/s/JS::WeakMapPtr/JS_PUBLIC_API(&)/' \
    ./js/src/vm/WeakMapPtr.cpp
https://hg.mozilla.org/mozilla-central/rev/c64aa77208a6
Assignee: nobody → goughostt
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
You need to log in before you can comment on or make changes to this bug.