Bug 977400 - Fixed WeakMapPtr visibility, r=sfink

--HG--
extra : rebase_source : 404dabdbaa3056988f922ce711292ded7f77f7dc